--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,54 @@
+# -----------------------------
+# Logs
+# -----------------------------
 logs
 *.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# -----------------------------
+# Dependencies & Builds
+# -----------------------------
+node_modules/
+dist/
+dist-ssr/
 *.local
 
+# -----------------------------
+# Environment Files
+# -----------------------------
+.env
+.env.*
+!.env.example      # allow example env template
+!.env.development  # allow local dev override if needed
+
+# Ignore actual keys
+.env.local
+.env.production
+.env.staging
+
+# -----------------------------
+# System Files
+# -----------------------------
+.DS_Store
+Thumbs.db
+
+# -----------------------------
+# Editor / IDE
+# -----------------------------
 .vscode/*
 !.vscode/extensions.json
-.idea
-.DS_Store
+
+.idea/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-.env
+
+# -----------------------------
+# Vercel
+# -----------------------------
+.vercel/
